TP-1614 Use some z-index variables and fix dropdown z-index

--- a/public/themes/custom/palvelumanuaali/components/02-molecules/menus/main-menu/_00-main-menu.scss
+++ b/public/themes/custom/palvelumanuaali/components/02-molecules/menus/main-menu/_00-main-menu.scss
@@ -30,7 +30,7 @@ $main-menu-medium: $medium;
   @include list-reset;
 
   position: relative;
-  z-index: 10;
+  z-index: $zi-main-menu;
 
   @include medium {
     border-bottom: none;
@@ -63,7 +63,7 @@ $main-menu-medium: $medium;
       position: absolute;
       top: 55px;
       width: 315px;
-      z-index: 1;
+      z-index: $zi-above-content;
       font-size: 0.9rem;
       opacity: 0.6;
     }
